--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,11 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(13,1,105,1);
-    background: -moz-linear-gradient(top, rgba(13,1,105,1) 0%, rgba(97,82,140,1) 50%, rgba(93,35,112,1) 51%, rgba(73,38,105,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(13,1,105,1)), color-stop(50%, rgba(97,82,140,1)), color-stop(51%, rgba(93,35,112,1)), color-stop(100%, rgba(73,38,105,1)));
-    background: -webkit-linear-gradient(top, rgba(13,1,105,1) 0%, rgba(97,82,140,1) 50%, rgba(93,35,112,1) 51%, rgba(73,38,105,1) 100%);
-    background: -o-linear-gradient(top, rgba(13,1,105,1) 0%, rgba(97,82,140,1) 50%, rgba(93,35,112,1) 51%, rgba(73,38,105,1) 100%);
-    background: -ms-linear-gradient(top, rgba(13,1,105,1) 0%, rgba(97,82,140,1) 50%, rgba(93,35,112,1) 51%, rgba(73,38,105,1) 100%);
-    background: linear-gradient(to bottom, rgba(13,1,105,1) 0%, rgba(97,82,140,1) 50%, rgba(93,35,112,1) 51%, rgba(73,38,105,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0d0169', endColorstr='#492669', GradientType=0 );
+    background: #0f0c29;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
 
 .grid{
@@ -21,21 +18,20 @@
     width: 100%;
 }
 
+.grid-active{
+    opacity: 0.1!important;
+    filter: blur(3px);
+}
+
 @keyframes scrolling{
     0%{
         top: 0px;
-        opacity: 0.05;
     }
     100%{
         top: -1000px;
-        opacity: 0.05;
     }
 }
 
-.BOOST{
-    animation: scrolling 1s infinite !important;
-    animation-timing-function: linear !important;
-}
 
 .numpad{
     height: 280px;
