Ajout des touches nombres (non-numpad) + Modification graphique
Les touches 1 2 3 4 5 6 7 8 9 qui ne sont pas sur le Numpad peuvent être utilisées, quelques modifications graphiques comme d'habitude

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,13 @@
     animation-timing-function: linear;
     position: relative;
     width: 100%;
+    margin: auto;
 }
 
 .grid-active{
     opacity: 0.1!important;
-    filter: blur(3px);
+    filter: blur(1px);
+    transform: scale(1.01,1.01);
 }
 
 @keyframes scrolling{
@@ -62,7 +64,6 @@
     margin-bottom: 20px;
     background: rgba(255, 255, 255, 0.1);
     font-weight: bold;
-    transition: 0.1s;
     cursor: pointer;
     border: solid 2px transparent;
 }
