--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,6 @@
     border: solid 2px #fff !important;
     background: rgba(255, 255, 255, 0.25) !important;
     transform: scale(1.1,1.1);
-    transition: 0.05s;
 }
 
 #keyboard-title{
@@ -141,6 +140,51 @@
     font-weight: bold;
     font-size: 52px !important;
     margin-top: -70px !important;
+}
+
+.packs{
+    position: relative;
+    z-index: 2;
+}
+
+.packs ul{
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.packs ul li{
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 100px;
+    font-size: 32px;
+    text-align: center;
+    height: 50px;
+    width: 50px;
+    display: inline-flex;
+    margin: 0px 8px;
+    overflow: hidden;
+    text-align: center;
+    border: solid 2px rgba(255, 255, 255, 0);
+    transition: 0.15s;
+    cursor: pointer;
+}
+
+.packs ul li img{
+    height: 40px;
+    width: 40px;
+    margin: auto;
+    filter: saturate(0);
+    transition: 0.15s;
+}
+
+.packs ul li img:hover{
+    filter: saturate(1);
+}
+
+
+.packs ul li:hover{
+    border: solid 2px rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.25);
 }
 
 
